--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -17,6 +17,200 @@
       </main>
     {% endblock content %}
 
+     <section id="poskytovane-sluzby" class="poskytovane-sluzby">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3>Poskytované služby</h3>
+                    <div class="jumbotron">
+                        <ul>
+                            <li>diagnostika a léčba akutních a chronických onemocnění</li>
+                            <li>pravidelná kontrola zdravotního stavu, předpis léků</li>
+                            <li>pravidelné preventivní prohlídky každé 2 roky</li>
+                            <li>předoperační vyšetření</li>
+                            <li>odběry krve a moče</li>
+                            <li>očkování</li>
+                            <li>dispenzarizace vybraných chronických onemocnění</li>
+                            <li>spolupráce s ambulantními specialisty</li>
+                            <li>návštěvní služba (smluvená územní oblast pro návštěvní službu: město Plzeň, do 10 km od ordinace)</li>
+                            <li>možnost vyšetření CRP (ukazatel zánětlivého procesu) a INR (monitorace léčby Warfarinem) přímo v ordinaci</li>
+                            <li>EKG vyšetření – monitorace srdeční činnosti přímo v ordinaci</li>
+                            <li>24–hodinová ambulantní monitorace krevního tlaku (Holter TK)</li>
+                            <li>možnost vyšetření FOB (přístrojové vyšetření skrytého krvácení do stolice)</li>
+                            <li><a href="GDPR.pdf">Informace pro pacienty o zpracování osobních údajů</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+        <section id="vybaveni" class="poskytovane-sluzby">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3>Přístrojové vybavení ordinace</h3>
+                    <div class="jumbotron">
+                        <ul>
+                            <li>EKG přístroj</li>
+                            <li>Glukometr – vyšetření krevního cukru</li>
+                            <li>Koagulometr – stanovení INR - kontrola účinnosti léčby Warfarinem</li>
+                            <li>24–hodinová monitorace tlaku krevního – Holter TK</li>
+                            <li>Přístroj pro stanovení CRP (ukazatel zánětu), FOB (vyšetření skrytého krvácení do stolice)</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="fotografie" class="fotografie">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3>Fotografie</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <img src="images/mc_foto_1.jpg" class="img-responsive img-rounded" />
+                </div>
+                <div class="col-lg-6">
+                    <img src="images/mc_foto_2.jpg" class="img-responsive img-rounded" />
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <section id="smluvni-pojistovny" class="smluvni-pojistovny">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <h3>Smluvní pojišťovny</h3>
+                    <div class="jumbotron">
+                        <ul>
+                            <li>111 – Všeobecná zdravotní pojišťovna</li>
+                            <li>201 – Vojenská zdravotní pojišťovna ČR</li>
+                            <li>211 – Zdravotní pojišťovna Ministerstva vnitra ČR</li>
+                            <li>205 – Česká průmyslová zdravotní pojišťovna</li>
+                            <li>207 – Oborová zdravotní pojišťovna</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="cenik-vykonu" class="cenik-vykonu">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3>Ceník výkonů nehrazených ze zdravotního pojištění</h3>
+                    <table class="table table-bordered cenik">
+                        <tr>
+                            <th>Výkon</th>
+                            <th>Cena</th>
+                        </tr>
+                        <tr>
+                            <td>Výpis ze zdravotnické dokumentace</td>
+                            <td>250 Kč</td>
+                        </tr>
+                        <tr>
+                            <td>Vyšetření pro řidičský průkaz (vydání, rozšíření, prodloužení)</td>
+                            <td>500 Kč</td>
+                        </tr>
+                        <tr>
+                            <td>Vyšetření k vystavení zdravotního průkazu</td>
+                            <td>350 Kč</td>
+                        </tr>
+                        <tr>
+                            <td>Zdravotní prohlídka na žádost zaměstnavatele</td>
+                            <td>600 Kč</td>
+                        </tr>
+                        <tr>
+                            <td>Vyšetření pro rizikové sporty a činnosti, vyšetření k vydání/prodloužení zbrojního průkazu</td>
+                            <td>600 Kč</td>
+                        </tr>
+                        <tr>
+                            <td>Lékařská zpráva pro komerční pojišťovnu, bodové hodnocení pracovního úrazu  -  s eventuální úpravou dle časové náročnosti</td>
+                            <td>300-600 Kč</td>
+                        </tr>
+                        <tr>
+                            <td>Vyšetření a odběr krve na alkohol</td>
+                            <td>500 Kč</td>
+                        </tr>
+                         <tr>
+                        <td>Vyšetření před operací nehrazené z veřejného zdravotního pojištění</td>
+                            <td>600 Kč + požadovaná doplňující vyšetření</td>
+                        </tr>
+                        <tr>
+                            <td>Preventivní vyšetření stolice (FOB) do 50 let věku</td>
+                            <td>200 Kč</td>
+                        </tr>
+                        <tr>
+                            <td>Vyšetření osob bez zdravotního pojištění</td>
+                            <td>1,50 Kč/bod</td>
+                        </tr>
+                        <tr>
+                            <td>Nadstandardní očkování</td>
+                            <td>100 Kč + cena vakcíny</td>
+                        </tr>
+                        <tr>
+                            <td>Vystavení duplikátu dokladu (pracovní neschopnost, zdravotní průkaz)</td>
+                            <td>100 Kč</td>
+                        </tr>
+                        <tr>
+                            <td>Vyšetření před vystavením návrhu na lázeňskou péči - samoplátce</td>
+                            <td>400 Kč</td>
+                        </tr>
+                
+                        <tr>
+                            <td>Posouzení zdravotní způsobilosti ke studiu</td>
+                            <td>200 Kč</td>
+                        </tr>
+                        <tr>
+                            <td>Zpráva pro účast na rekondičních a rekreačních pobytech</td>
+                            <td>200 Kč</td>
+                        </tr>
+                        <tr>
+                            <td>Laboratorní vyšetření na vlastní žádost</td>
+                            <td>dle ceníku laboratoře</td>
+                        </tr>
+                        <tr>
+                            <td>Pořízení kopie zdravotnické dokumentace</td>
+                            <td>5 Kč za 1 stranu</td>
+                        </tr>
+                        <tr>
+                            <td>Administrativní úkon lékaře nezařazený jinde</td>
+                            <td>od 100 Kč dle časové náročnosti</td>
+                        </tr>
+                    </table>
+
+                    U ŽÁDNÉHO ZDRAVOTNÍHO VÝKONU PROVEDENÉHO V TÉTO ORDINACI NENÍ VYŽADOVÁN SOUHLAS PACIENTA PÍSEMNOU FORMOU.
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="mapy" class="mapy">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3>Mapa</h3>
+
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5156.58108716557!2d13.368118786469681!3d49.74297675519004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470af1fc167bd9d1%3A0xcae2dcd1a671ab5b!2sMedical+centrum+s.r.o.!5e0!3m2!1scs!2sus!4v1467356326499"
+                        width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
     {% block footer %}
       {% include "components/footer.njk" %}
     {% endblock footer %}
