--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -1,7 +1,7 @@
 <footer class="bg-secondary py-3 text-white">
   <div class="container">
     <div class="row">
-      <span class="h2">There is no footer content yet...</span>
+      Copyright &copy; 2021 Medical centrum s.r.o
     </div>
   </div>
 </footer>
