--- a/src/_assets/scss/main.scss
+++ b/src/_assets/scss/main.scss
@@ -4,3 +4,145 @@
 [aria-current="page"] {
   @extend .text-decoration-underline;
 }
+
+.nav-link {
+	padding-right: 1.0rem;
+	padding-left: 1.0rem;
+}
+
+.zakladni-informace {
+    padding-top: 0px;
+    text-align: center;
+    background: #eee;
+}
+
+.zakladni-informace table {
+	background-color: white;
+}
+
+.zakladni-informace .jumbotron {
+	background-color: white;
+}
+
+.had {
+    background-image: url(../images/background.png);
+    background-position: right center;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    z-index: 4;
+}
+
+.poskytovane-sluzby {
+    padding-top: 50px;
+    text-align: center;
+    background: #eee;
+}
+
+.objednavani, .objednavani p {
+    text-align: left;
+    font-size: 18px;
+} 
+
+.fotografie {
+    text-align: center;
+    padding-top: 50px;
+    background: #eee;
+}
+
+
+.poskytovane-sluzby .jumbotron {
+    background-color: white;
+}
+
+.smluvni-pojistovny {
+    xheight: 100%;
+    padding-top: 50px;
+    text-align: center;
+    background: #eee;
+}
+
+.smluvni-pojistovny .jumbotron {
+	background-color: white;
+}
+
+.cenik-vykonu {
+    xheight: 100%;
+    padding-top: 50px;
+    text-align: center;
+    background: #eee;
+}
+
+.kontakt {
+    xheight: 100%;
+    padding-top: 50px;
+    text-align: center;
+    background: #eee;
+}
+
+.mapy {
+    xheight: 100%;
+    padding-top: 50px;
+    text-align: center;
+    background: #eee;
+}
+
+.backg {
+	min-height: 158px;
+}
+
+header {
+    background-image: linear-gradient(to bottom, #c1d3ec 0, #daedf6 100%);
+}
+
+.page-header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: white;
+
+    background-image: linear-gradient(to bottom, #5B6CF0 0, #50A1D4 100%);
+    margin: 0;
+}
+
+.google-maps {
+    position: relative;
+    padding-bottom: 75%; // This is the aspect ratio
+    height: 0;
+    overflow: hidden;
+}
+.google-maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+}
+
+.row ul {
+    list-style-position: inside;
+    padding: 5px;
+}
+
+.row li {
+    padding: 5px;
+    font-size: 18px;
+	text-align: left;
+}
+
+table.cenik td:first-child {
+    text-align: left;
+}
+
+table.cenik {
+    background-color: white;
+}
+
+table.cenik {
+    background-color: white;
+}
+
+.text-x {
+    color: #FF2E57;
+}
+
