--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ site.language }}">
+<html lang="cs">
   <head>
     {% block head %}
       {% include "components/head.njk" %}
