--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -1,7 +1,5 @@
 <footer class="bg-secondary py-3 text-white">
   <div class="container">
-    <div class="row">
-      Copyright &copy; 2021 Medical centrum s.r.o
-    </div>
+    <div class="row">{{ site.copyright }}</div>
   </div>
 </footer>
