--- a/src/_includes/components/head.njk
+++ b/src/_includes/components/head.njk
@@ -1,8 +1,8 @@
-<title>{{ site.meta.title }}</title>
+<title>{{ site.title }} - {{ site.subtitle }}</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="{{ site.meta.description }}">
+<meta name="description" content="{{ site.description }}">
 
 {% block css %}
   <link href="/_assets/main.css" rel="stylesheet"/>
