--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -4,11 +4,19 @@
   </div>
 </header>
 
-<div class="page-header">
-	<h1>Medical centrum</h1>
-	<h1>MUDr. Jana Červená</h1>
-	<h1><small>praktický lékař pro dospělé</small></h1>
-</div>
+<section id="intro" class="zakladni-informace">
+    <div class="page-header">
+		<div class="container">
+	        <div class="row">
+	            <div class="col-lg-12 had backg">
+					<h1>{{ site.title }}</h1>
+					<h1>{{ site.subtitle }}</h1>
+					<p><strong>{{ site.description }}</p></strong>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 
