--- a/src/_includes/components/navigation-main.njk
+++ b/src/_includes/components/navigation-main.njk
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-primary">
-  <a class="navbar-brand" href="/">{{ site.name }}</a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-md navbar-light">
+  <a class="navbar-brand" href="/"><strong>{{ site.title }}</strong></a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Rozbalit nabídku">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse d-md-flex justify-content-md-end" id="navbarNav">
+  <div class="collapse navbar-collapse d-md-flex" id="navbarNav">
     <ul class="navbar-nav">
       {% for item in menus.main %}
         <li class="nav-item">
