--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,12 +1,143 @@
-<html>
-    <head>
-        <title>Eleventy + Netlify CMS Blog Example</title>
-    </head>
+<!DOCTYPE html>
+<html lang="cs">
 
-    <body>
-        <h1>
-            Eleventy + Netlify CMS Blog Example
-        </h1>
-        {{ content | safe }}
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Medical centrum - MUDr. Jana Červená</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/scrolling-nav.css" rel="stylesheet">
+
+    <style>
+        .text-x {
+            color: #FF2E57;
+        }
+
+    </style>
+
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Rozbalit nabídku</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top"><strong>Medical centrum</strong></a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#poskytovane-sluzby">Služby</a>
+                    </li>
+                                        <li>
+                        <a class="page-scroll" href="#vybaveni">Vybavení</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#fotografie">Fotografie</a>
+                    </li>
+
+                    <li>
+                        <a class="page-scroll" href="#smluvni-pojistovny">Smluvní pojišťovny</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#cenik-vykonu">Ceník výkonů</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#mapy">Mapa</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Intro Section -->
+    <section id="intro" class="zakladni-informace">
+        <div class="page-header">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 had backg">
+
+
+                        <h1>Medical centrum</h1>
+                        <h1>MUDr. Jana Červená</h1>
+                        <p><strong>praktický lékař pro dospělé</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <br/>
+
+{% set postslist = collections.posts %}
+{% set partslist = collections.parts %}
+
+{% for post in postslist | reverse %}
+<section id="{{ post.data.slug }}">
+	<div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+            	 <div class="jumbotron text-left objednavani">
+                	{{ post.data.content | safe }}
+            	</div>
+            </div>
+        </div>
+    </div>
+</section>
+{% endfor %}
+
+{{ content | safe }}
+
+
+{% for part in partslist %}
+<section id={{ part.data.id }}>
+	<div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+            	{% if part.data.type == "block" %}
+	            	 <h3>{{ part.data.title }}</h3>
+	            	 <div class="jumbotron text-left objednavani">            
+	                	{{ part.data.content | safe }}
+					</div>
+				{% endif %}
+            	{% if part.data.type == "inline" %}
+	            	<h3>{{ part.data.title }}</h3>
+	                {{ part.data.content | safe }}
+	                <p></p>
+				{% endif %}
+            </div>
+        </div>
+    </div>
+</section>
+{% endfor %}
+
+
+
+
+
     </body>
 </html>
