--- a/index.njk
+++ b/index.njk
@@ -2,4 +2,95 @@
 layout: layouts/base.njk
 permalink: /
 ---
-Hello! Welcome to the Eleventy + Netlify from scratch homepage.
+
+<section>
+<div class="container">
+<div class="row">
+					<div class="col-md-6">
+                    <h3>Ordinační hodiny</h3>
+                    <!-- table class="table table-bordered">
+                        <tr>
+                            <th></th>
+                            <th class="info">bez objednání</th>
+                            <th>objednaní</th>
+                            <th class="info">bez objednání</th>
+                        </tr>
+                        <tr>
+                            <th>Po</th>
+                            <td class="info">7:30 - 12:30</td>
+                            <td>-</td>
+                            <td class="info">-</td>
+                        </tr>
+                        <tr>
+                            <th>Út</th>
+                            <td class="info">7:30 - 12:30</td>
+                            <td>13:00 - 14:00</td>
+                            <td class="info">-</td>
+                        </tr>
+                        <tr>
+                            <th>St</th>
+                            <td class="info">7:30 - 12:00</td>
+                            <td>-</td>
+                            <td class="info">14:00 - 18:00</td>
+                        </tr>
+                        <tr>
+                            <th>Čt</th>
+                            <td class="info">7:30 - 12:30</td>
+                            <td>13:00 - 14:00</td>
+                            <td class="info">-</td>
+                        </tr>
+                        <tr>
+                            <th>Pá</th>
+                            <td class="info">7:30 - 12:00</td>
+                            <td>-</td>
+                            <td class="info">-</td>
+                        </tr>
+                    </table -->
+
+                    <table class="table table-bordered">
+                        <tr>
+                            <td></td>
+                            <td class="info"><strong>dopoledne</strong></td>
+                            <td><strong>odpoledne</strong></td>
+                        </tr>
+                        <tr>
+                            <th>Po</th>
+                            <td class="info">7:30 - 12:30</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <th>Út</th>
+                            <td class="info">7:30 - 12:30</td>
+                            <td>13:00 - 14:00</td>
+                        </tr>
+                        <tr>
+                            <th>St</th>
+                            <td class="info">7:30 - 12:00</td>
+                            <td>14:00 - 18:00</td>
+                        </tr>
+                        <tr>
+                            <th>Čt</th>
+                            <td class="info">7:30 - 12:30</td>
+                            <td>13:00 - 14:00</td>
+                        </tr>
+                        <tr>
+                            <th>Pá</th>
+                            <td class="info">7:30 - 12:00</td>
+                            <td>-</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-md-6">
+                    <h3>Kontakt</h3>
+
+                    <div class="jumbotron">
+                        <p class="lead">
+                            Plachého 19<br /> 301 00 Plzeň<br />
+                            <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span> 377 325 998<br />
+                            <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> ordinace<span style="display: none;">NOSPAM</span>@medicalcentrum.cz
+                        </p>
+                    </div>
+                </div>
+ </div>
+ </div>
+ </section>
