--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -24,6 +24,17 @@ section {
     background-color: #eee;
 }
 
+section.posts {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    margin-bottom: 0;
+}
+
+#intro {
+    margin-bottom: 20px;
+}
+
 .jumbotron {
     background-color: white;
 }
